--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://shoogle.us/maine"
+baseURL = "https://us.shoogle.net/maine"
 languageCode = "en-US"
 title = "Maine"
 theme = "ln-base"
