update content and data

--- a/data/cities/south-portland/millcreek-barber-shop.yml
+++ b/data/cities/south-portland/millcreek-barber-shop.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490734
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: hairdresser
+latitude: 43.6352922
+longitude: -70.25377660000001
 postcode: "04106"
 city: South Portland
 street: "Market Street"
