--- a/data/cities/south-portland/shoppers-hardware.yml
+++ b/data/cities/south-portland/shoppers-hardware.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490741
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: hardware
+latitude: 43.635291300000006
+longitude: -70.2546816
 postcode: "04106"
 city: South Portland
 street: "Market Street"
