--- a/data/cities/south-portland/todays-nails.yml
+++ b/data/cities/south-portland/todays-nails.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490729
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: beauty
+latitude: 43.635212800000005
+longitude: -70.2528018
 postcode: "04106"
 city: South Portland
 street: "Market Street"
