--- a/data/cities/waterville/gamestop.yml
+++ b/data/cities/waterville/gamestop.yml
@@ -1,12 +1,12 @@
 id: 7201673777
 type: node
-shop: mall
+shop: video games
 latitude: 44.5706703
 longitude: -69.642751
 postcode: "04901"
 city: Waterville
 street: "Waterville Commons Drive"
 housenumber: 12
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1-207-859-9848"
+opening_hours: "Mo,We,Sa 12:00-20:00; Tu,Th,Fr 10:00-20:00; Su 12:00-18:00"
+website: "https://www.gamestop.com/store/us/ME/Waterville/3432/Shops-at-Waterville-Commons-GameStop"
