--- a/data/cities/westbrook/mavens-candies.yml
+++ b/data/cities/westbrook/mavens-candies.yml
@@ -1,12 +1,12 @@
-id: 854217674
+id: 854217680
 type: way
-shop: storage rental
-latitude: 43.6507701
-longitude: -70.3441923
+shop: chocolate
+latitude: 43.6511112
+longitude: -70.3470204
 postcode: "04092"
 city: Westbrook
 street: "County Road"
-housenumber: 45
+housenumber: 87
 phone: ""
 opening_hours: ""
 website: ""
