--- a/data/cities/eastport/iga.yml
+++ b/data/cities/eastport/iga.yml
@@ -1,8 +1,8 @@
-id: 3468486472
-type: node
+id: 867840867
+type: way
 shop: supermarket
-latitude: 44.905990900000006
-longitude: -66.99486060000001
+latitude: 44.906091
+longitude: -66.994551
 postcode: "04631"
 city: Eastport
 street: "Washington Street"
