--- a/data/cities/greene/family-dollar.yml
+++ b/data/cities/greene/family-dollar.yml
@@ -1,6 +1,6 @@
 id: 7383687447
 type: node
-shop: shop
+shop: variety store
 latitude: 44.185420400000005
 longitude: -70.1608131
 postcode: "04236"
