--- a/data/cities/south-portland/dollar-tree.yml
+++ b/data/cities/south-portland/dollar-tree.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490730
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: variety store
+latitude: 43.6352094
+longitude: -70.2531179
 postcode: "04106"
 city: South Portland
 street: "Market Street"
