--- a/data/cities/south-portland/garden-island-laundry.yml
+++ b/data/cities/south-portland/garden-island-laundry.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490731
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: laundry
+latitude: 43.635238400000006
+longitude: -70.2533478
 postcode: "04106"
 city: South Portland
 street: "Market Street"
