--- a/data/cities/south-portland/mainely-wireless.yml
+++ b/data/cities/south-portland/mainely-wireless.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490736
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: mobile phone
+latitude: 43.635235300000005
+longitude: -70.254042
 postcode: "04106"
 city: South Portland
 street: "Market Street"
