--- a/data/cities/south-portland/nonesuch-books.yml
+++ b/data/cities/south-portland/nonesuch-books.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490732
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: books
+latitude: 43.6351467
+longitude: -70.2535009
 postcode: "04106"
 city: South Portland
 street: "Market Street"
