--- a/data/cities/south-portland/peinado-hairworks.yml
+++ b/data/cities/south-portland/peinado-hairworks.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490739
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: hairdresser
+latitude: 43.6351868
+longitude: -70.25435710000001
 postcode: "04106"
 city: South Portland
 street: "Market Street"
