--- a/data/cities/south-portland/petlife.yml
+++ b/data/cities/south-portland/petlife.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490742
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: pet
+latitude: 43.6352398
+longitude: -70.2548603
 postcode: "04106"
 city: South Portland
 street: "Market Street"
