--- a/data/cities/south-portland/specs-for-less.yml
+++ b/data/cities/south-portland/specs-for-less.yml
@@ -1,8 +1,8 @@
-id: 7188490735
+id: 7188490733
 type: node
-shop: charity
-latitude: 43.635214500000004
-longitude: -70.2538866
+shop: optician
+latitude: 43.635293600000004
+longitude: -70.2536465
 postcode: "04106"
 city: South Portland
 street: "Market Street"
