--- a/data/cities/waterville/gnc.yml
+++ b/data/cities/waterville/gnc.yml
@@ -1,12 +1,12 @@
 id: 7201673285
 type: node
-shop: mall
+shop: nutrition supplements
 latitude: 44.570649800000005
 longitude: -69.64239810000001
 postcode: "04901"
 city: Waterville
 street: "Waterville Commons Drive"
 housenumber: 4
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1-207-859-9373"
+opening_hours: "Mo-Sa 09:00-19:00; Su 10:00-18:00"
+website: "https://www.gnc.com/store-details?StoreID=5065"
