--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "Maine"
 theme = "ln-base"
 
 disableKinds = ["taxonomy", "taxonomyTerm"]
+enableGitInfo = true
 
 [outputs]
   home = ["HTML", "JSON"]
