update content and data

--- a/data/cities/rockland/higher-vibes.yml
+++ b/data/cities/rockland/higher-vibes.yml
@@ -1,8 +1,8 @@
 id: 662754453
 type: way
 shop: cannabis
-latitude: 44.096844000000004
-longitude: -69.1338367
+latitude: 44.096843
+longitude: -69.13383280000001
 postcode: "04841"
 city: Rockland
 street: "New County Road"
