--- a/data/cities/west-gardiner/fullers-market.yml
+++ b/data/cities/west-gardiner/fullers-market.yml
@@ -5,7 +5,7 @@ latitude: 44.2519621
 longitude: -69.86625020000001
 postcode: "04345"
 city: West Gardiner
-street: "Hallowell Litchfield RD"
+street: "Litchfield-Hallowell Road"
 housenumber: 599
 phone: "+1-207-724-3940"
 opening_hours: ""
