update content and data

--- a/data/cities/china-village/lakeview-lumber.yml
+++ b/data/cities/china-village/lakeview-lumber.yml
@@ -7,5 +7,5 @@ city: China Village
 street: "Lakeview Drive"
 housenumber: 1341
 phone: "(207) 968-2498"
-opening_hours: "Mon-Sat: 6:00-5:00. Sun: 9:00-3:00"
+opening_hours: "Mo-Sa 06:00-17:00; Su 09:00-15:00"
 website: "https://www.facebook.com/pages/category/Hardware-Store/Lakeview-Lumber-510689855632506/"
