--- a/data/cities/portland/cumberland-farms-2.yml
+++ b/data/cities/portland/cumberland-farms-2.yml
@@ -1,11 +1,11 @@
-id: 397367057
+id: 914726063
 type: way
-latitude: 43.6863061
-longitude: -70.292941
-postcode: "04103"
+latitude: 43.651507
+longitude: -70.2686692
+postcode: "04102"
 city: Portland
-street: "Forest Avenue"
-housenumber: 1136
+street: "Pine Street"
+housenumber: 49
 phone: ""
 opening_hours: ""
 website: ""
