--- a/data/cities/limestone/dollar-general.yml
+++ b/data/cities/limestone/dollar-general.yml
@@ -1,7 +1,7 @@
 id: 702294276
 type: way
-latitude: 46.9149661
-longitude: -67.833883
+latitude: 46.9149843
+longitude: -67.83386990000001
 postcode: "04750"
 city: Limestone
 street: "Access Highway"
