--- a/data/cities/portland/cumberland-farms.yml
+++ b/data/cities/portland/cumberland-farms.yml
@@ -1,11 +1,11 @@
-id: 1686008298
-type: node
-latitude: 43.6513964
-longitude: -70.2686259
-postcode: "04102"
+id: 397367057
+type: way
+latitude: 43.6863061
+longitude: -70.292941
+postcode: "04103"
 city: Portland
-street: "Pine Street"
-housenumber: 49
+street: "Forest Avenue"
+housenumber: 1136
 phone: ""
 opening_hours: ""
 website: ""
