update content and data

--- a/data/cities/kittery/navy-commissary.yml
+++ b/data/cities/kittery/navy-commissary.yml
@@ -2,9 +2,9 @@ id: 372290487
 type: way
 latitude: 43.080352100000006
 longitude: -70.7332567
-postcode: ""
-city: Portsmouth Naval Shipyard
-street: "Beaumont Aveune"
+postcode: "03904"
+city: Kittery
+street: "Beaumont Avenue"
 housenumber: 167
 phone: "+1-207-439-6054"
 opening_hours: ""
