--- a/data/cities/freeport/gipsy-rags.yml
+++ b/data/cities/freeport/gipsy-rags.yml
@@ -7,5 +7,5 @@ city: Freeport
 street: "Bow Street"
 housenumber: 27
 phone: "+1-207-865-7078"
-opening_hours: "Mo-Th 10:00-17:30; Fr-Sa 10:00-18:00; Su 10:00-17:30"
-website: "http://www.consignfreeport.com"
+opening_hours: "Tu-Sa 11:00-17:00"
+website: ""
