--- a/data/cities/kittery/navy-exchange.yml
+++ b/data/cities/kittery/navy-exchange.yml
@@ -2,8 +2,8 @@ id: 372290488
 type: way
 latitude: 43.0811683
 longitude: -70.73361270000001
-postcode: ""
-city: Portsmouth Naval Shipyard
+postcode: "03904"
+city: Kittery
 street: "Beaumont Aveune"
 housenumber: 168
 phone: ""
