--- a/data/cities/portland/cyclemania.yml
+++ b/data/cities/portland/cyclemania.yml
@@ -6,6 +6,6 @@ postcode: "04101"
 city: Portland
 street: "Cove Street"
 housenumber: 65
-phone: ""
+phone: "(207) 774-2933"
 opening_hours: ""
-website: ""
+website: "https://www.cyclemania1.com/"
