update content and data

--- a/data/cities/hallowell/quirk-ford-of-augusta.yml
+++ b/data/cities/hallowell/quirk-ford-of-augusta.yml
@@ -1,7 +1,7 @@
 id: 412112180
 type: way
 latitude: 44.296116600000005
-longitude: -69.7857771
+longitude: -69.78578
 postcode: "04347"
 city: Hallowell
 street: "Water Street"
