--- a/data/cities/waterville/bull-moose.yml
+++ b/data/cities/waterville/bull-moose.yml
@@ -7,5 +7,5 @@ city: Waterville
 street: "Elm Plaza"
 housenumber: 80
 phone: "+1-207-861-5884"
-opening_hours: "Mo 09:00-01:30, Tu 09:00-23:00; We-Su 09:00-23:00"
+opening_hours: "Mo-Su 10:00-21:00"
 website: "http://bullmoose.com/"
