--- a/data/cities/portland/cyclemania.yml
+++ b/data/cities/portland/cyclemania.yml
@@ -7,5 +7,5 @@ city: Portland
 street: "Cove Street"
 housenumber: 65
 phone: "(207) 774-2933"
-opening_hours: ""
+opening_hours: "Mo-Sa 10:00-17:00"
 website: "https://www.cyclemania1.com/"
