--- a/data/cities/portland/gorham-bike-and-ski.yml
+++ b/data/cities/portland/gorham-bike-and-ski.yml
@@ -7,5 +7,5 @@ city: Portland
 street: "Congress Street"
 housenumber: 693
 phone: "+1-207-773-1700"
-opening_hours: ""
+opening_hours: "Mo-Fr 10:00-18:00; Sa 09:00-17:00"
 website: "https://www.gorhambike.com/"
