--- a/data/cities/ellsworth/atandt.yml
+++ b/data/cities/ellsworth/atandt.yml
@@ -1,11 +1,11 @@
-id: 299475501
-type: way
-latitude: 44.5273735
-longitude: -68.39832200000001
+id: 9298103012
+type: node
+latitude: 44.523712800000006
+longitude: -68.3970156
 postcode: "04605"
 city: Ellsworth
 street: "Myrick Street"
-housenumber: 56
+housenumber: 3
 phone: ""
 opening_hours: ""
 website: ""
