update content and data

--- a/data/cities/waterville/verizon-wireless.yml
+++ b/data/cities/waterville/verizon-wireless.yml
@@ -1,11 +1,11 @@
-id: 3710081633
+id: 7935076809
 type: node
-latitude: 44.5678694
-longitude: -69.6405414
+latitude: 44.543281400000005
+longitude: -69.6665478
 postcode: "04901"
 city: Waterville
-street: "Elm Plaza"
-housenumber: 110
-phone: "+1-207-872-9901"
+street: "Kennedy Memorial Drive"
+housenumber: 270
+phone: ""
 opening_hours: ""
-website: "http://verizonwireless.com/"
+website: ""
