--- a/data/cities/freeport/fcs-thrift-shop.yml
+++ b/data/cities/freeport/fcs-thrift-shop.yml
@@ -7,5 +7,5 @@ city: Freeport
 street: "Depot Street"
 housenumber: 53
 phone: "+1-207-837-5178"
-opening_hours: "Mo-Fr 09:00-17:00; Sa 09:00-16:00"
-website: "http://thriftshop.fcsmaine.org"
+opening_hours: "Mo 11:00-15:00; Tu-Fr 12:00-17:00; Sa 10:00-15:00"
+website: "https://fcsmaine.org/thrift-shop/"
