update content and data

--- a/data/cities/kittery/navy-exchange.yml
+++ b/data/cities/kittery/navy-exchange.yml
@@ -5,7 +5,7 @@ longitude: -70.7336121
 postcode: "03904"
 city: Kittery
 street: "Beaumont Aveune"
-housenumber: 168
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
