--- a/data/cities/north-berwick/the-studio.yml
+++ b/data/cities/north-berwick/the-studio.yml
@@ -1,11 +1,11 @@
-id: 7172585182
-type: node
-latitude: 43.30588
-longitude: -70.73544
+id: 1016215445
+type: way
+latitude: 43.30598
+longitude: -70.73546
 postcode: "03906"
 city: North Berwick
-street: "Market Street"
+street: "Main Street"
 housenumber: 15
-phone: ""
+phone: "1-207-957-4080"
 opening_hours: ""
 website: ""
