update content and data

--- a/data/cities/patten/daisy-boutique.yml
+++ b/data/cities/patten/daisy-boutique.yml
@@ -1,10 +1,10 @@
-id: 440414441
+id: 1020911239
 type: way
-latitude: 45.99597
-longitude: -68.4476
+latitude: 45.99644
+longitude: -68.44831
 postcode: "04765"
 city: Patten
-street: "Main Street"
+street: "Katahdin Street"
 housenumber: 10
 phone: ""
 opening_hours: ""
