update content and data

--- a/data/cities/limington/dollar-general.yml
+++ b/data/cities/limington/dollar-general.yml
@@ -1,7 +1,7 @@
-id: 7289637178
-type: node
-latitude: 43.74666
-longitude: -70.67925
+id: 1021740799
+type: way
+latitude: 43.74663
+longitude: -70.6795
 postcode: "04049"
 city: Limington
 street: "Sokokis Avenue"
