update content and data

--- a/data/cities/scarborough/oak-hill-beverage.yml
+++ b/data/cities/scarborough/oak-hill-beverage.yml
@@ -1,11 +1,11 @@
 id: 3110059243
 type: node
-latitude: 43.59188
-longitude: -70.33345
+latitude: 43.59148
+longitude: -70.33396
 postcode: "04074"
 city: Scarborough
-street: "Adams Way"
-housenumber: 28
-phone: ""
+street: "gorham rd"
+housenumber: 29
+phone: "207-883-3965"
 opening_hours: "Mo-Th 09:00-19:00; Fr,Sa 09:00-20:00; Su 10:00-18:00"
-website: ""
+website: "oakhillbeverage.com"
