update content and data

--- a/data/cities/skowhegan/walmart-garden-center.yml
+++ b/data/cities/skowhegan/walmart-garden-center.yml
@@ -1,7 +1,7 @@
-id: 242753135
-type: way
-latitude: 44.77984
-longitude: -69.73204
+id: 9498422914
+type: node
+latitude: 44.78005
+longitude: -69.73178
 postcode: "04976"
 city: Skowhegan
 street: "Fairgrounds Marketplace"
