update content and data

--- a/data/cities/saco/maine-bike-works.yml
+++ b/data/cities/saco/maine-bike-works.yml
@@ -1,7 +1,7 @@
-id: 845531146
-type: way
-latitude: 43.54103
-longitude: -70.41699
+id: 9528397149
+type: node
+latitude: 43.54114
+longitude: -70.41678
 postcode: "04072"
 city: Saco
 street: "Portland Road"
