--- a/data/cities/kittery/7-eleven.yml
+++ b/data/cities/kittery/7-eleven.yml
@@ -4,7 +4,7 @@ latitude: 43.10963
 longitude: -70.73628
 postcode: "03904"
 city: Kittery
-street: "US Route 1"
+street: "US Route 1;Route 1"
 housenumber: 286
 phone: ""
 opening_hours: ""
