update content and data

--- a/data/cities/saco/hannaford.yml
+++ b/data/cities/saco/hannaford.yml
@@ -1,7 +1,7 @@
-id: 2611798734
-type: node
-latitude: 43.51164
-longitude: -70.4354
+id: 1035062198
+type: way
+latitude: 43.51174
+longitude: -70.43567
 postcode: "04072"
 city: Saco
 street: "Main Street"
