update content and data

--- a/data/cities/portland/indulge-salon-and-day-spa.yml
+++ b/data/cities/portland/indulge-salon-and-day-spa.yml
@@ -1,11 +1,11 @@
-id: 30141146
-type: way
-latitude: 43.67451
-longitude: -70.295
+id: 7170762243
+type: node
+latitude: 43.67423
+longitude: -70.29506
 postcode: "04103"
 city: Portland
 street: "Stevens Avenue"
-housenumber: 469
+housenumber: 459
 phone: ""
 opening_hours: ""
 website: ""
