--- a/data/cities/portland/paulins-tire-and-auto-care.yml
+++ b/data/cities/portland/paulins-tire-and-auto-care.yml
@@ -1,11 +1,11 @@
-id: 362866234
-type: way
-latitude: 43.65347
-longitude: -70.28268
-postcode: "04102"
+id: 7170757496
+type: node
+latitude: 43.68276
+longitude: -70.29089
+postcode: "04103"
 city: Portland
-street: "Congress Street"
-housenumber: 1020
-phone: "+1-207-774-5508"
+street: "Forest Avenue"
+housenumber: 1036
+phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.paulinstire.com/"
