update content and data

--- a/data/cities/oakland/dragon-nails-styling-salon.yml
+++ b/data/cities/oakland/dragon-nails-styling-salon.yml
@@ -1,11 +1,11 @@
-id: 7566918974
+id: 7566918841
 type: node
-latitude: 44.55036
-longitude: -69.71939
+latitude: 44.54819
+longitude: -69.71949
 postcode: "04963"
 city: Oakland
 street: "Oak Street"
-housenumber: 45
-phone: ""
+housenumber: 12
+phone: "+12077162146"
 opening_hours: ""
 website: ""
