--- a/data/cities/oakland/laundry-mat.yml
+++ b/data/cities/oakland/laundry-mat.yml
@@ -1,11 +1,11 @@
-id: 7566918837
+id: 7566918785
 type: node
-latitude: 44.54787
-longitude: -69.71719
+latitude: 44.54795
+longitude: -69.7168
 postcode: "04963"
 city: Oakland
 street: "Main Street"
 housenumber: 43
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 09:00-20:00"
 website: ""
