--- a/data/cities/waterville/verizon-wireless.yml
+++ b/data/cities/waterville/verizon-wireless.yml
@@ -8,4 +8,4 @@ street: "Kennedy Memorial Drive"
 housenumber: 270
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://victra.com/stores/me-waterville?y_source=1_NjE4OTk1OC03MTUtbG9jYXRpb24ud2Vic2l0ZQ%3D%3D"
