update content and data

--- a/data/cities/bangor/l-l-bean-outlet.yml
+++ b/data/cities/bangor/l-l-bean-outlet.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
 housenumber: 534
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+12079420146"
+opening_hours: "Mo-Su 09:00-20:00"
+website: "https://www.llbean.com/llb/shop/1000001711"
