--- a/data/cities/bangor/old-navy.yml
+++ b/data/cities/bangor/old-navy.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
 housenumber: 480
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+12073072033"
+opening_hours: "Mo-Sa 10:00-21:00, Su 10:00-19:00"
+website: "https://oldnavy.gap.com/stores/me/bangor/oldnavy-3785.html"
