--- a/data/cities/bangor/regal-nails.yml
+++ b/data/cities/bangor/regal-nails.yml
@@ -1,11 +1,11 @@
-id: 375846884
-type: way
-latitude: 44.83206
-longitude: -68.755
+id: 9740590216
+type: node
+latitude: 44.83975
+longitude: -68.7488
 postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
-housenumber: 638
+housenumber: 900
 phone: ""
 opening_hours: ""
 website: ""
