--- a/data/cities/bangor/autozone.yml
+++ b/data/cities/bangor/autozone.yml
@@ -1,11 +1,11 @@
-id: 375846884
+id: 375846881
 type: way
-latitude: 44.83206
-longitude: -68.755
+latitude: 44.83469
+longitude: -68.75079
 postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
-housenumber: 638
+housenumber: 754;744
 phone: ""
 opening_hours: ""
 website: ""
