--- a/data/cities/bangor/kohls.yml
+++ b/data/cities/bangor/kohls.yml
@@ -6,6 +6,6 @@ postcode: "04401"
 city: Bangor
 street: "Stillwater Avenue"
 housenumber: 520
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+12079422565"
+opening_hours: "Mo-Sa 10:00-21:00, Su 10:00-20:00"
+website: "https://www.kohls.com/stores/me/bangor-198.shtml"
