update content and data

--- a/data/cities/westbrook/rei.yml
+++ b/data/cities/westbrook/rei.yml
@@ -8,4 +8,4 @@ street: "Rock Row"
 housenumber: 90
 phone: "+1-207-591-2160"
 opening_hours: "Mo-Sa 10:00-21:00; Su 11:00-17:00"
-website: "https://www.rei.com/stores/westbrook.html"
+website: "https://www.rei.com/stores/westbrook"
