update content and data

--- a/data/cities/mount-desert/freshies.yml
+++ b/data/cities/mount-desert/freshies.yml
@@ -7,5 +7,5 @@ city: Mount Desert
 street: "Main Street"
 housenumber: 1052
 phone: "+1-207-244-7206"
-opening_hours: ""
+opening_hours: "Mo-Su 05:30-22:00"
 website: "https://freshiesdeli.com/"
