--- a/data/cities/portland/amatos.yml
+++ b/data/cities/portland/amatos.yml
@@ -7,5 +7,5 @@ city: Portland
 street: "India Street"
 housenumber: 71
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 10:00-20:00; Su 10:00-19:00"
 website: ""
