update content and data

--- a/data/cities/rockland/verizon.yml
+++ b/data/cities/rockland/verizon.yml
@@ -1,11 +1,11 @@
-id: 652525095
+id: 384441768
 type: way
-latitude: 44.09854
-longitude: -69.11795
+latitude: 44.1073
+longitude: -69.1101
 postcode: "04841"
 city: Rockland
-street: "Broadway"
-housenumber: 90
-phone: ""
+street: "Main Street"
+housenumber: 532
+phone: "+1-207-596-7779"
 opening_hours: ""
 website: ""
