--- a/data/cities/scarborough/ace-hardware.yml
+++ b/data/cities/scarborough/ace-hardware.yml
@@ -1,7 +1,7 @@
-id: 7230900480
-type: node
-latitude: 43.59193
-longitude: -70.3342
+id: 1072849363
+type: way
+latitude: 43.59203
+longitude: -70.33441
 postcode: "04074"
 city: Scarborough
 street: "Gorham Road"
