--- a/data/cities/scarborough/oak-hill-beverage.yml
+++ b/data/cities/scarborough/oak-hill-beverage.yml
@@ -1,7 +1,7 @@
-id: 3110059243
-type: node
-latitude: 43.59148
-longitude: -70.33396
+id: 1072849359
+type: way
+latitude: 43.59152
+longitude: -70.334
 postcode: "04074"
 city: Scarborough
 street: "gorham rd"
