update content and data

--- a/data/cities/kennebunk/cummings-market.yml
+++ b/data/cities/kennebunk/cummings-market.yml
@@ -1,7 +1,7 @@
-id: 7538763964
-type: node
-latitude: 43.40568
-longitude: -70.56508
+id: 1076390541
+type: way
+latitude: 43.40588
+longitude: -70.5652
 postcode: "04043"
 city: Kennebunk
 street: "Alfred Road"
