--- a/data/cities/limestone/norstar-appliance.yml
+++ b/data/cities/limestone/norstar-appliance.yml
@@ -1,11 +1,11 @@
-id: 701988205
-type: way
-latitude: 46.91153
-longitude: -67.82546
+id: 6592358544
+type: node
+latitude: 46.91031
+longitude: -67.82523
 postcode: "04750"
 city: Limestone
 street: "Main Street"
-housenumber: 14
+housenumber: 34
 phone: "+1-207-492-9308"
 opening_hours: ""
 website: ""
