--- a/data/cities/gorham/cumberland-farms.yml
+++ b/data/cities/gorham/cumberland-farms.yml
@@ -1,11 +1,11 @@
-id: 539543567
+id: 394959254
 type: way
-latitude: 43.64037
-longitude: -70.42119
+latitude: 43.68131
+longitude: -70.43728
 postcode: "04038"
 city: Gorham
-street: "Blue Ledge Road"
-housenumber: 5
+street: "Main Street"
+housenumber: 137
 phone: ""
 opening_hours: ""
 website: ""
