update content and data

--- a/data/cities/gorham/aandm-auto-sales.yml
+++ b/data/cities/gorham/aandm-auto-sales.yml
@@ -1,7 +1,7 @@
-id: 7157247823
-type: node
-latitude: 43.68544
-longitude: -70.3861
+id: 1087120332
+type: way
+latitude: 43.68548
+longitude: -70.38609
 postcode: "04038"
 city: Gorham
 street: "Main Street"
