--- a/data/cities/falmouth/hannaford.yml
+++ b/data/cities/falmouth/hannaford.yml
@@ -6,6 +6,6 @@ postcode: "04105"
 city: Falmouth
 street: "Gray Road"
 housenumber: 65
-phone: "+1-207-878-0050"
-opening_hours: "Mo-Th 07:00-22:00; Fr,Sa 07:00-23:00; Su 07:00-21:00"
+phone: "+1 207 878 0050"
+opening_hours: "Mo-Sa 07:00-22:00; Su 07:00-21:00"
 website: "https://www.hannaford.com/custserv/store_detail.jsp?viewStoreId=21050"
