update content and data

--- a/data/cities/south-portland/burlington.yml
+++ b/data/cities/south-portland/burlington.yml
@@ -6,6 +6,6 @@ postcode: "04106"
 city: South Portland
 street: "Running Hill Road"
 housenumber: 200
-phone: "+1-207-773-4861"
+phone: ""
 opening_hours: ""
 website: ""
