update content and data

--- a/data/cities/andover/mills-market.yml
+++ b/data/cities/andover/mills-market.yml
@@ -4,7 +4,7 @@ latitude: 44.63483
 longitude: -70.75036
 postcode: "04216"
 city: Andover
-street: "Main Street"
+street: "South Main Street"
 housenumber: 28
 phone: ""
 opening_hours: ""
