update content and data

--- a/data/cities/peaks-island/hannigans-island-market.yml
+++ b/data/cities/peaks-island/hannigans-island-market.yml
@@ -6,6 +6,6 @@ postcode: "04108"
 city: Peaks Island
 street: "Island Avenue"
 housenumber: 76
-phone: ""
-opening_hours: ""
+phone: "+1-207-766-2351"
+opening_hours: "Mo-Su 08:00-19:00"
 website: ""
