update content and data

--- a/data/cities/winterport/hillcrest-orchards.yml
+++ b/data/cities/winterport/hillcrest-orchards.yml
@@ -1,7 +1,7 @@
-id: 5859603687
-type: node
-latitude: 44.62959
-longitude: -68.86317
+id: 620168910
+type: way
+latitude: 44.6295
+longitude: -68.8634
 postcode: "04496"
 city: Winterport
 street: "South Maine Street"
