update content and data

--- a/data/cities/augusta/claires.yml
+++ b/data/cities/augusta/claires.yml
@@ -4,7 +4,7 @@ latitude: 44.34385
 longitude: -69.78777
 postcode: "04330"
 city: Augusta
-street: "Stephen King Drive;Stephen King drive"
+street: "Stephen King Drive"
 housenumber: 2
 phone: "+1-207-623-1561"
 opening_hours: ""
