--- a/data/cities/augusta/kay-jewelers.yml
+++ b/data/cities/augusta/kay-jewelers.yml
@@ -4,7 +4,7 @@ latitude: 44.34403
 longitude: -69.78771
 postcode: "04330"
 city: Augusta
-street: "Stephen King Drive;Stephen King Dr."
+street: "Stephen King Drive"
 housenumber: 2
 phone: "+1-207-623-0127"
 opening_hours: ""
