update content and data

--- a/data/cities/boothbay/east-boothbay-general-store.yml
+++ b/data/cities/boothbay/east-boothbay-general-store.yml
@@ -2,8 +2,8 @@ id: 386850733
 type: way
 latitude: 43.86297
 longitude: -69.58551
-postcode: "04538"
-city: Boothbay Harbor
+postcode: "04544"
+city: Boothbay
 street: "Ocean Point Road"
 housenumber: 255
 phone: "+1-207-633-7800"
