--- a/data/cities/southport/the-barn.yml
+++ b/data/cities/southport/the-barn.yml
@@ -1,11 +1,11 @@
-id: 235326155
+id: 1105111230
 type: way
-latitude: 43.82361
-longitude: -69.67733
+latitude: 43.82349
+longitude: -69.67722
 postcode: "04576"
 city: Southport
 street: "Hendricks Hill Road"
 housenumber: 443
 phone: ""
 opening_hours: ""
-website: "http://www.southportgeneralstore.com/"
+website: ""
