--- a/data/cities/augusta/supercuts.yml
+++ b/data/cities/augusta/supercuts.yml
@@ -1,11 +1,11 @@
-id: 886546431
+id: 884227638
 type: way
-latitude: 44.34447
-longitude: -69.78887
+latitude: 44.31428
+longitude: -69.80414
 postcode: "04330"
 city: Augusta
-street: "Stephen King Drive"
-housenumber: 1
-phone: ""
+street: "Senator Way"
+housenumber: 5
+phone: "+12072136698"
 opening_hours: ""
-website: ""
+website: "http://supercuts.com/locations/me/augusta/journal-square-retail-center-haircuts-81344.html"
