update content and data

--- a/data/cities/waterville/ace-auto-sales.yml
+++ b/data/cities/waterville/ace-auto-sales.yml
@@ -7,5 +7,5 @@ city: Waterville
 street: "College Avenue"
 housenumber: 68
 phone: "+1-207-873-5166"
-opening_hours: "Mo-Fr 08:00-17:00; Sa 08:00-15:00; Su Closed"
+opening_hours: "Mo-Fr 08:00-17:00; Sa 08:00-15:00; Su closed"
 website: "http://watervilleusedvehicles.com/"
