--- a/data/cities/waterville/incense-and-peppermints.yml
+++ b/data/cities/waterville/incense-and-peppermints.yml
@@ -7,5 +7,5 @@ city: Waterville
 street: "Main Street"
 housenumber: 48
 phone: "2078600318"
-opening_hours: "Mo-Fr 09:00-17:30  Su 11:00-16:00"
+opening_hours: "Mo-Fr 09:00-17:30; Su 11:00-16:00"
 website: "https://www.enchatedstores.com"
