update content and data

--- a/data/cities/biddeford/elements.yml
+++ b/data/cities/biddeford/elements.yml
@@ -1,7 +1,7 @@
-id: 7173162005
-type: node
-latitude: 43.49402
-longitude: -70.45809
+id: 1157409559
+type: way
+latitude: 43.4939
+longitude: -70.45833
 postcode: "04005"
 city: Biddeford
 street: "Main Street"
