update content and data

--- a/data/cities/bangor/fairmount-market.yml
+++ b/data/cities/bangor/fairmount-market.yml
@@ -1,7 +1,7 @@
-id: 6739931349
-type: node
-latitude: 44.79909
-longitude: -68.79561
+id: 1165009093
+type: way
+latitude: 44.79913
+longitude: -68.79563
 postcode: "04401"
 city: Bangor
 street: "Hammond Street"
