--- a/data/cities/brewer/hannaford.yml
+++ b/data/cities/brewer/hannaford.yml
@@ -1,11 +1,11 @@
-id: 508709817
-type: way
+id: 1691294860
+type: node
 latitude: 44.78322
-longitude: -68.75022
+longitude: -68.7542
 postcode: "04412"
 city: Brewer
 street: "Wilson Street"
-housenumber: 435
+housenumber: 383
 phone: ""
 opening_hours: ""
 website: ""
