--- a/data/cities/brewer/loyal-biscuit-company.yml
+++ b/data/cities/brewer/loyal-biscuit-company.yml
@@ -1,11 +1,11 @@
-id: 508709817
-type: way
-latitude: 44.78322
-longitude: -68.75022
+id: 7209114998
+type: node
+latitude: 44.78387
+longitude: -68.75247
 postcode: "04412"
 city: Brewer
 street: "Wilson Street"
-housenumber: 435
+housenumber: 421
 phone: ""
 opening_hours: ""
 website: ""
