update content and data

--- a/data/cities/brewer/circle-k.yml
+++ b/data/cities/brewer/circle-k.yml
@@ -1,7 +1,7 @@
-id: 1691293686
-type: node
-latitude: 44.79771
-longitude: -68.76059
+id: 1174312844
+type: way
+latitude: 44.79776
+longitude: -68.76061
 postcode: "04412"
 city: Brewer
 street: "North Main Street"
