update content and data

--- a/data/cities/scarborough/christmas-tree-shops.yml
+++ b/data/cities/scarborough/christmas-tree-shops.yml
@@ -1,7 +1,7 @@
-id: 559842419
-type: way
-latitude: 43.62985
-longitude: -70.34485
+id: 10963877087
+type: node
+latitude: 43.62897
+longitude: -70.34565
 postcode: "04074"
 city: Scarborough
 street: "Payne Road"
