--- a/data/cities/corinna/through-the-garden-gate-exeter-road.yml
+++ b/data/cities/corinna/through-the-garden-gate-exeter-road.yml
@@ -1,11 +1,11 @@
-id: 881429969
+id: 881423628
 type: way
-latitude: 44.94033
-longitude: -69.22627
+latitude: 44.9403
+longitude: -69.22653
 postcode: "04928"
 city: Corinna
 street: "Exeter Road"
-housenumber: 437
-phone: "+1-207-341-0191"
+housenumber: 438
+phone: ""
 opening_hours: ""
-website: "https://www.throughthegardengates.com/"
+website: ""
