update content and data

--- a/data/cities/monhegan/monhegan-brewing.yml
+++ b/data/cities/monhegan/monhegan-brewing.yml
@@ -1,7 +1,7 @@
-id: 3682785305
-type: node
-latitude: 43.75924
-longitude: -69.32045
+id: 1181479205
+type: way
+latitude: 43.7593
+longitude: -69.32052
 postcode: "04852"
 city: Monhegan
 street: "Lobster Cove Road"
