--- a/data/cities/westbrook/quill-books-and-beverage.yml
+++ b/data/cities/westbrook/quill-books-and-beverage.yml
@@ -7,5 +7,5 @@ city: Westbrook
 street: "Westbrook Common"
 housenumber: 1
 phone: "+1-207-591-0056"
-opening_hours: "Su 09:00-18:00; Mo-Tu 07:00-18:00; We-Fr 07:15-22:00; Sa 09:00-22:00"
-website: ""
+opening_hours: ""
+website: "https://www.quillbooksandbeverage.com/"
