update content and data

--- a/data/cities/bar-harbor/acadia-bike-rentals.yml
+++ b/data/cities/bar-harbor/acadia-bike-rentals.yml
@@ -6,6 +6,6 @@ postcode: "04609"
 city: Bar Harbor
 street: "Cottage Street"
 housenumber: 48
-phone: "6172889605"
+phone: "+1 207 288-9605"
 opening_hours: ""
-website: ""
+website: "https://www.acadiabike.com/"
