--- a/data/cities/kittery-point/provisions.yml
+++ b/data/cities/kittery-point/provisions.yml
@@ -6,6 +6,6 @@ postcode: "03905"
 city: Kittery Point
 street: "Pepperrell Road"
 housenumber: 90
-phone: "2077032028"
+phone: "+1 207 703-2028"
 opening_hours: ""
 website: "https://www.pepperrellcove.com/provisions-general-store.html"
