--- a/data/cities/peaks-island/peaks-island-cart-rental-shop.yml
+++ b/data/cities/peaks-island/peaks-island-cart-rental-shop.yml
@@ -6,6 +6,6 @@ postcode: "04108"
 city: Peaks Island
 street: "Island Avenue"
 housenumber: 62
-phone: "(207) 747-8309"
+phone: "+1 (207) 747-8309"
 opening_hours: ""
 website: "http://peaksislandcarts.com/"
