--- a/data/cities/saint-george/port-clyde-general-store.yml
+++ b/data/cities/saint-george/port-clyde-general-store.yml
@@ -6,6 +6,6 @@ postcode: "04855;04860"
 city: Saint George
 street: "Cold Storage Road"
 housenumber: 4
-phone: "tel:207-372-6543"
+phone: "+1 207 372-6543"
 opening_hours: "Mo-Su 06:00-18:00"
 website: "https://www.portclydegeneralstore.com/"
