--- a/data/cities/greenwood/paaso-racing.yml
+++ b/data/cities/greenwood/paaso-racing.yml
@@ -8,4 +8,4 @@ street: "North Main Street"
 housenumber: 303
 phone: "207-357-1979"
 opening_hours: ""
-website: "http://paasoracing.com/"
+website: "https://www.paasoracing.com/"
