--- a/data/cities/portland/print-a-bookstore.yml
+++ b/data/cities/portland/print-a-bookstore.yml
@@ -6,6 +6,6 @@ postcode: "04101"
 city: Portland
 street: "Congress Street"
 housenumber: 273
-phone: "(207) 536-4778"
+phone: "+1 (207) 536-4778"
 opening_hours: ""
 website: "https://www.printbookstore.com/"
