--- a/data/cities/scarborough/oak-hill-beverage.yml
+++ b/data/cities/scarborough/oak-hill-beverage.yml
@@ -4,8 +4,8 @@ latitude: 43.59152
 longitude: -70.334
 postcode: "04074"
 city: Scarborough
-street: "gorham rd"
+street: "Gorham Road"
 housenumber: 29
-phone: "207-883-3965"
+phone: "+1 207 883-3965"
 opening_hours: "Mo-Th 09:00-19:00; Fr,Sa 09:00-20:00; Su 10:00-18:00"
-website: "oakhillbeverage.com"
+website: "https://oakhillbeverage.com/"
