--- a/data/cities/south-berwick/on-point-tattoo-co.yml
+++ b/data/cities/south-berwick/on-point-tattoo-co.yml
@@ -6,6 +6,6 @@ postcode: "03908"
 city: South Berwick
 street: "Portland Street"
 housenumber: 10
-phone: "+207-704-0315"
+phone: "+1 207 704-0315"
 opening_hours: "Tu-Sa 11:00-19:00"
-website: "https://onpointtattoo.business.site/"
+website: "https://www.onpointtattoocompany.com/"
