--- a/data/cities/kittery/lindt.yml
+++ b/data/cities/kittery/lindt.yml
@@ -7,5 +7,5 @@ city: Kittery
 street: "Route 1"
 housenumber: 345
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Th 10:00-18:00; Su 11:00-18:00; Fr,Sa 10:00-20:00"
 website: ""
