--- a/data/cities/boothbay-harbor/seawicks-candle-company.yml
+++ b/data/cities/boothbay-harbor/seawicks-candle-company.yml
@@ -1,11 +1,11 @@
-id: 1105337850
-type: way
-latitude: 43.85117
-longitude: -69.62745
+id: 7343668978
+type: node
+latitude: 43.8518
+longitude: -69.6279
 postcode: "04538"
 city: Boothbay Harbor
-street: "Wharf Street"
-housenumber: 8
+street: "Townsend Avenue"
+housenumber: 4
 phone: ""
 opening_hours: ""
 website: ""
