update content and data

--- a/data/cities/litchfield/percys-hardware-company.yml
+++ b/data/cities/litchfield/percys-hardware-company.yml
@@ -4,7 +4,7 @@ latitude: 44.13499
 longitude: -69.98123
 postcode: "04350"
 city: Litchfield
-street: "Richmond Rd"
+street: "Richmond Road"
 housenumber: 483
 phone: "+1-207-268-9181"
 opening_hours: ""
