--- a/data/cities/veazie/rm-flagg.yml
+++ b/data/cities/veazie/rm-flagg.yml
@@ -1,7 +1,7 @@
-id: 3658410334
-type: node
-latitude: 44.82535
-longitude: -68.71925
+id: 1193108652
+type: way
+latitude: 44.8256
+longitude: -68.71935
 postcode: "04401"
 city: Veazie
 street: "State Street"
