update content and data

--- a/data/cities/eliot/sanel-napa-auto-parts.yml
+++ b/data/cities/eliot/sanel-napa-auto-parts.yml
@@ -4,7 +4,7 @@ latitude: 43.12143
 longitude: -70.76171
 postcode: "03903"
 city: Eliot
-street: "Harold L Dow Hwy"
+street: "Harold L Dow Highway"
 housenumber: 21
 phone: ""
 opening_hours: ""
