--- a/data/cities/freeport/stio.yml
+++ b/data/cities/freeport/stio.yml
@@ -6,6 +6,6 @@ postcode: "04032"
 city: Freeport
 street: "Bow Street"
 housenumber: 6
-phone: "+1-207-865-6174"
-opening_hours: "Mo off; Tu-Su 11:00-17:00"
-website: "https://seabags.com/"
+phone: ""
+opening_hours: ""
+website: "https://www.stio.com/"
