--- a/data/cities/scarborough/the-holy-donut.yml
+++ b/data/cities/scarborough/the-holy-donut.yml
@@ -8,4 +8,4 @@ street: "Route 1"
 housenumber: 398
 phone: ""
 opening_hours: "Mo-Su 06:00-17:00"
-website: ""
+website: "https://www.theholydonut.com/"
