update content and data

--- a/data/cities/veazie/gerrys-used-cars.yml
+++ b/data/cities/veazie/gerrys-used-cars.yml
@@ -1,7 +1,7 @@
-id: 7157500222
-type: node
-latitude: 44.8245
-longitude: -68.71895
+id: 1196658237
+type: way
+latitude: 44.82458
+longitude: -68.71906
 postcode: "04401"
 city: Veazie
 street: "State Street"
