update content and data

--- a/data/cities/harpswell/holbrooks-general-store.yml
+++ b/data/cities/harpswell/holbrooks-general-store.yml
@@ -1,7 +1,7 @@
-id: 7179449771
-type: node
-latitude: 43.78839
-longitude: -69.89292
+id: 1201152807
+type: way
+latitude: 43.78842
+longitude: -69.89285
 postcode: "04079"
 city: Harpswell
 street: "Cundys Harbor Road"
