update content and data

--- a/data/cities/camden/stop-n-go-store.yml
+++ b/data/cities/camden/stop-n-go-store.yml
@@ -1,7 +1,7 @@
-id: 7217171505
-type: node
-latitude: 44.20735
-longitude: -69.06746
+id: 1201714584
+type: way
+latitude: 44.20743
+longitude: -69.06753
 postcode: "04843"
 city: Camden
 street: "Elm Street"
