--- a/data/cities/mechanic-falls/hannaford.yml
+++ b/data/cities/mechanic-falls/hannaford.yml
@@ -1,7 +1,7 @@
-id: 7288895119
-type: node
-latitude: 44.07819
-longitude: -70.41545
+id: 1202448196
+type: way
+latitude: 44.07817
+longitude: -70.41588
 postcode: "04256"
 city: Mechanic Falls
 street: "Pigeon Hill Road"
