--- a/data/cities/southport/gift-shop-hendricks-hill-road.yml
+++ b/data/cities/southport/gift-shop-hendricks-hill-road.yml
@@ -1,11 +1,11 @@
-id: 11166112070
-type: node
-latitude: 43.78958
-longitude: -69.65754
+id: 1105334794
+type: way
+latitude: 43.84092
+longitude: -69.65536
 postcode: "04576"
 city: Southport
 street: "Hendricks Hill Road"
-housenumber: 1020
+housenumber: 20
 phone: ""
 opening_hours: ""
 website: ""
