--- a/data/cities/bangor/damons-beverage-and-redemption.yml
+++ b/data/cities/bangor/damons-beverage-and-redemption.yml
@@ -1,7 +1,7 @@
-id: 103610185
-type: way
-latitude: 44.83688
-longitude: -68.74499
+id: 11186995575
+type: node
+latitude: 44.8375
+longitude: -68.74463
 postcode: "04401"
 city: Bangor
 street: "Hogan Road"
