--- a/data/cities/rockland/the-home-depot.yml
+++ b/data/cities/rockland/the-home-depot.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Rockland
 street: "Camden Street"
 housenumber: 270
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1-207-594-6401"
+opening_hours: "Mo-Sa 06:00-21:00; Su 08:00-19:00"
+website: "https://www.homedepot.com/l/Rockland-ME/ME/Rockland/04841/2409"
