update content and data

--- a/data/cities/skowhegan/sherwin-williams-madison-avenue.yml
+++ b/data/cities/skowhegan/sherwin-williams-madison-avenue.yml
@@ -1,11 +1,11 @@
-id: 7365536125
-type: node
-latitude: 44.78016
-longitude: -69.72586
+id: 302355413
+type: way
+latitude: 44.77927
+longitude: -69.72548
 postcode: "04976"
 city: Skowhegan
 street: "Madison Avenue"
-housenumber: 271
+housenumber: 257
 phone: ""
 opening_hours: ""
 website: ""
