update content and data

--- a/data/cities/gray/big-apple.yml
+++ b/data/cities/gray/big-apple.yml
@@ -1,11 +1,11 @@
-id: 732721919
-type: way
-latitude: 43.88495
-longitude: -70.33033
+id: 7176544767
+type: node
+latitude: 43.87852
+longitude: -70.32904
 postcode: "04039"
 city: Gray
 street: "Portland Road"
-housenumber: 1
+housenumber: 46
 phone: ""
 opening_hours: ""
 website: ""
