--- a/data/cities/gray/lifetime-auto-repair.yml
+++ b/data/cities/gray/lifetime-auto-repair.yml
@@ -1,10 +1,10 @@
-id: 7176542747
+id: 7176542316
 type: node
-latitude: 43.88067
-longitude: -70.32815
+latitude: 43.89483
+longitude: -70.32859
 postcode: "04039"
 city: Gray
-street: "Portland Road"
+street: "Lewiston Road"
 housenumber: 35
 phone: ""
 opening_hours: ""
