--- a/data/cities/gray/portland-safe.yml
+++ b/data/cities/gray/portland-safe.yml
@@ -1,11 +1,11 @@
-id: 7176542747
+id: 7176483979
 type: node
-latitude: 43.88067
-longitude: -70.32815
+latitude: 43.85181
+longitude: -70.32102
 postcode: "04039"
 city: Gray
 street: "Portland Road"
-housenumber: 35
-phone: ""
+housenumber: 235
+phone: "12073584000"
 opening_hours: ""
 website: ""
