update content and data

--- a/data/cities/chester/north-chester-orchard.yml
+++ b/data/cities/chester/north-chester-orchard.yml
@@ -8,4 +8,4 @@ street: "North Chester Road"
 housenumber: 460
 phone: "+1-207-794-3547"
 opening_hours: ""
-website: "http://www.northchesterorchard.com"
+website: "https://www.northchesterorchard.com/"
