--- a/data/cities/sherman/sherman-thriftway.yml
+++ b/data/cities/sherman/sherman-thriftway.yml
@@ -8,4 +8,4 @@ street: "Woodbridge Corner Road"
 housenumber: 3
 phone: "207-365-4538"
 opening_hours: ""
-website: "www.shermanthriftway.com"
+website: "https://www.shermanthriftway.com/"
