--- a/data/cities/dover-foxcroft/bobs-sugarhouse.yml
+++ b/data/cities/dover-foxcroft/bobs-sugarhouse.yml
@@ -8,4 +8,4 @@ street: "East Main Street"
 housenumber: 252
 phone: "+1-207-564-2145"
 opening_hours: ""
-website: "http://www.mainemaplesyrup.com"
+website: "https://mainemaplesyrup.com/"
