--- a/data/cities/fort-fairfield/giberson-dorsey-funeral-home.yml
+++ b/data/cities/fort-fairfield/giberson-dorsey-funeral-home.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 144
 phone: "+1-207-472-4731"
 opening_hours: ""
-website: "http://www.gibersondorseyfuneralhome.com/"
+website: "https://www.gibersondorseyfuneralhome.com/"
