--- a/data/cities/fort-fairfield/murchison-computer-sales.yml
+++ b/data/cities/fort-fairfield/murchison-computer-sales.yml
@@ -8,4 +8,4 @@ street: "Presque Isle Street"
 housenumber: 95
 phone: "+1-207-476-5063"
 opening_hours: ""
-website: "http://www.murchcom.com/"
+website: "https://murchcom.com/"
