update content and data

--- a/data/cities/augusta/dollar-tree.yml
+++ b/data/cities/augusta/dollar-tree.yml
@@ -1,7 +1,7 @@
-id: 6542842361
-type: node
-latitude: 44.31147
-longitude: -69.79321
+id: 979454942
+type: way
+latitude: 44.31148
+longitude: -69.79336
 postcode: "04330"
 city: Augusta
 street: "Shaw's Plaza"
