--- a/data/cities/bangor/ski-rack-sports.yml
+++ b/data/cities/bangor/ski-rack-sports.yml
@@ -8,4 +8,4 @@ street: "Longview Drive"
 housenumber: 24
 phone: ""
 opening_hours: ""
-website: "http://www.skiracksports.com"
+website: "https://www.skiracksports.com/"
