--- a/data/cities/bethel/bob-and-terrys-ski-and-sports-outlet.yml
+++ b/data/cities/bethel/bob-and-terrys-ski-and-sports-outlet.yml
@@ -8,4 +8,4 @@ street: "Sunday River Road"
 housenumber: 61
 phone: ""
 opening_hours: ""
-website: "http://www.bobandterrys.com"
+website: "https://www.bobandterrys.com/"
