--- a/data/cities/camden/megunticook-market.yml
+++ b/data/cities/camden/megunticook-market.yml
@@ -8,4 +8,4 @@ street: "Gould Street"
 housenumber: 2
 phone: ""
 opening_hours: "Mo-Sa 07:00-19:00"
-website: "http://www.megunticookmarket.com/"
+website: "https://www.megunticookmarket.com/"
