--- a/data/cities/ellsworth/darlings-auto-mall.yml
+++ b/data/cities/ellsworth/darlings-auto-mall.yml
@@ -8,4 +8,4 @@ street: "Kingsland Crossing"
 housenumber: 16
 phone: "+1-877-548-1819"
 opening_hours: ""
-website: "http://www.darlings.com"
+website: "https://www.darlings.com/"
