--- a/data/cities/ellsworth/ellsworth-giant-sub.yml
+++ b/data/cities/ellsworth/ellsworth-giant-sub.yml
@@ -8,4 +8,4 @@ street: "High Street"
 housenumber: 355
 phone: "+1-207-667-5585"
 opening_hours: ""
-website: "http://www.ellsworthgiantsub.com"
+website: "https://www.ellsworthgiantsub.com/"
