--- a/data/cities/kittery/7-eleven.yml
+++ b/data/cities/kittery/7-eleven.yml
@@ -1,11 +1,11 @@
-id: 413682226
+id: 92932088
 type: way
-latitude: 43.09978
-longitude: -70.74457
+latitude: 43.10963
+longitude: -70.73628
 postcode: "03904"
 city: Kittery
-street: "State Road"
-housenumber: 169
+street: "US Route 1;Route 1"
+housenumber: 286
 phone: ""
 opening_hours: ""
 website: ""
