--- a/data/cities/rumford/davis-florist.yml
+++ b/data/cities/rumford/davis-florist.yml
@@ -8,4 +8,4 @@ street: "Congress Street"
 housenumber: 138
 phone: "+1-207-364-7851"
 opening_hours: ""
-website: "http://davisfloristinc.com/davisflorist/Welcome.html"
+website: "https://davisfloristinc.com/davisflorist/Welcome.html"
