--- a/data/cities/rumford/mountain-view-eyecare.yml
+++ b/data/cities/rumford/mountain-view-eyecare.yml
@@ -8,4 +8,4 @@ street: "Franklin Street"
 housenumber: 56
 phone: "+1-207-364-4491"
 opening_hours: ""
-website: "http://www.mtnvieweyecare.com/"
+website: "https://www.mtnvieweyecare.com/"
