--- a/data/cities/scarborough/maine-radio.yml
+++ b/data/cities/scarborough/maine-radio.yml
@@ -8,4 +8,4 @@ street: "Mussey Road"
 housenumber: 68
 phone: "+1-207-883-2929"
 opening_hours: "Mo-Th 08:00-17:00; Fr 08:00-16:30"
-website: "maineradios.com"
+website: "https://maineradios.com/"
