--- a/data/cities/south-portland/yankee-custom.yml
+++ b/data/cities/south-portland/yankee-custom.yml
@@ -8,4 +8,4 @@ street: "Westbrook Street"
 housenumber: 477
 phone: "+1-207-799-7800"
 opening_hours: ""
-website: "http://www.yankeecustomtruck.com/"
+website: "https://www.yankeecustomtruck.com/"
