--- a/data/cities/augusta/shaws.yml
+++ b/data/cities/augusta/shaws.yml
@@ -1,11 +1,11 @@
-id: 7563919001
-type: node
-latitude: 44.31168
-longitude: -69.79476
+id: 979454939
+type: way
+latitude: 44.31195
+longitude: -69.79531
 postcode: "04330"
 city: Augusta
 street: "Western Avenue"
 housenumber: 150
-phone: ""
-opening_hours: ""
-website: ""
+phone: "(207) 623-4520"
+opening_hours: "Su-Sa 07:00-22:00"
+website: "https://local.shaws.com/me/augusta/150-western-ave.html"
