--- a/data/cities/bridgton/pure-spa-and-studio.yml
+++ b/data/cities/bridgton/pure-spa-and-studio.yml
@@ -8,4 +8,4 @@ street: "Portland Road"
 housenumber: 55
 phone: "+1-207-577-1262"
 opening_hours: ""
-website: "http://purespastudio.com/"
+website: "https://purespastudio.com/"
