--- a/data/cities/ellsworth/mardens-surplus-and-salvage.yml
+++ b/data/cities/ellsworth/mardens-surplus-and-salvage.yml
@@ -8,4 +8,4 @@ street: "High Street"
 housenumber: 461
 phone: "+1-207-669-6035"
 opening_hours: "Mo-Fr 09:00-20:00, Sa 09:00-17:00, Su 10:00-17:00"
-website: "http://mardens.com/mardwp/index.php/stores/ellsworth-mardens/"
+website: "https://www.mardens.com/mardwp/index.php/stores/ellsworth-mardens/"
