--- a/data/cities/ellsworth/stanley-subaru.yml
+++ b/data/cities/ellsworth/stanley-subaru.yml
@@ -8,4 +8,4 @@ street: "Bar Harbor Road"
 housenumber: 22
 phone: "+1-888-461-3367"
 opening_hours: ""
-website: "http://www.stanleysubaru.com/"
+website: "https://www.stanleysubaru.com/"
