update content and data

--- a/data/cities/bangor/shaws.yml
+++ b/data/cities/bangor/shaws.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 353
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://local.shaws.com/me/bangor/353-main-st.html"
