--- a/data/cities/ellsworth/shaws-supermarket.yml
+++ b/data/cities/ellsworth/shaws-supermarket.yml
@@ -8,4 +8,4 @@ street: "High Street"
 housenumber: 175
 phone: "+1-207-667-2293"
 opening_hours: ""
-website: ""
+website: "https://local.shaws.com/me/ellsworth/175-high-st.html"
