--- a/data/cities/lewiston/advance-auto-parts.yml
+++ b/data/cities/lewiston/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Lisbon Street"
 housenumber: 855
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/me/lewiston/855-lisbon-st"
