--- a/data/cities/oakland/ray-haskell-ford.yml
+++ b/data/cities/oakland/ray-haskell-ford.yml
@@ -8,4 +8,4 @@ street: "Kennedy Memorial Drive"
 housenumber: 801
 phone: ""
 opening_hours: ""
-website: "http://rayhaskellford.com/"
+website: "https://rayhaskellford.com/"
