--- a/data/cities/rockland/autozone.yml
+++ b/data/cities/rockland/autozone.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 574
 phone: "+1-207-594-1011"
 opening_hours: ""
-website: ""
+website: "https://www.autozone.com/locations/me/rockland/574-main-st.html"
