--- a/data/cities/rockland/shaws.yml
+++ b/data/cities/rockland/shaws.yml
@@ -8,4 +8,4 @@ street: "Camden Street"
 housenumber: 235
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://local.shaws.com/me/rockland/235-camden-st.html"
