--- a/data/cities/south-portland/autozone.yml
+++ b/data/cities/south-portland/autozone.yml
@@ -8,4 +8,4 @@ street: "Lincoln Street"
 housenumber: 436
 phone: "(207)-767-4714"
 opening_hours: ""
-website: "https://autozone.com"
+website: "https://www.autozone.com/locations/me/south-portland/436-lincoln-street-ext.html"
