--- a/data/cities/waterville/autozone.yml
+++ b/data/cities/waterville/autozone.yml
@@ -8,4 +8,4 @@ street: "Jfk Plaza"
 housenumber: 2
 phone: "+12078728668"
 opening_hours: "Mo-Fr 07:30-21:00, Sa 07:30-20:00, Su 08:30-19:00"
-website: "https://www.autozone.com/locations/me/waterville/2-jfk-plz.html?cmpid=LOC:US:EN:AD:NL:1000000:GEN:3214"
+website: "https://www.autozone.com/locations/me/waterville/2-jfk-plz.html"
