--- a/data/cities/auburn/shaws.yml
+++ b/data/cities/auburn/shaws.yml
@@ -8,4 +8,4 @@ street: "Center Street"
 housenumber: 600
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://local.shaws.com/me/auburn/600-center-st.html"
