--- a/data/cities/bath/shaws.yml
+++ b/data/cities/bath/shaws.yml
@@ -8,4 +8,4 @@ street: "Chandler Drive"
 housenumber: 1
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://local.shaws.com/me/bath/1-chandler-dr.html"
