--- a/data/cities/brunswick/advance-auto-parts-bath-road.yml
+++ b/data/cities/brunswick/advance-auto-parts-bath-road.yml
@@ -8,4 +8,4 @@ street: "Bath Road"
 housenumber: 27
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/me/brunswick/27-bath-rd"
