--- a/data/cities/brunswick/advance-auto-parts.yml
+++ b/data/cities/brunswick/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Gurnet Road"
 housenumber: 30
 phone: "+1-207-725-2040"
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/me/brunswick/30-gurnet-rd"
