--- a/data/cities/caribou/advance-auto-parts.yml
+++ b/data/cities/caribou/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Armco Avenue"
 housenumber: 3
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/me/caribou/3-armco-ave"
