--- a/data/cities/ellsworth/advance-auto-parts.yml
+++ b/data/cities/ellsworth/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Downeast Highway"
 housenumber: 84
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/me/ellsworth/84-downeast-hwy"
