--- a/data/cities/lewiston/shaws.yml
+++ b/data/cities/lewiston/shaws.yml
@@ -8,4 +8,4 @@ street: "East Avenue"
 housenumber: 27
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://local.shaws.com/me/lewiston/27-e-ave.html"
