--- a/data/cities/sanford/shaws.yml
+++ b/data/cities/sanford/shaws.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 1364
 phone: "+1-207-490-5309"
 opening_hours: "Mo-Sa 06:00-22:00; Su 07:00-21:00"
-website: ""
+website: "https://local.shaws.com/me/sanford/1364-main-st.html"
