--- a/data/cities/skowhegan/advance-auto-parts.yml
+++ b/data/cities/skowhegan/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Madison Avenue"
 housenumber: 253
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.advanceautoparts.com/me/skowhegan/253-madison-ave"
