--- a/data/cities/waterville/advance-auto-parts.yml
+++ b/data/cities/waterville/advance-auto-parts.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 367
 phone: "+1-207-877-9612"
 opening_hours: "Mo-Sa 07:30-19:00; Su 08:00-16:00"
-website: "https://shop.advanceautoparts.com/web/StoreLocatorDetailView?stAddressId=5483&storeId=10151&langId=-1&catalogId=10051"
+website: "https://stores.advanceautoparts.com/me/waterville/367-main-st"
