--- a/data/cities/waterville/shaws.yml
+++ b/data/cities/waterville/shaws.yml
@@ -8,4 +8,4 @@ street: "Kennedy Memorial Drive"
 housenumber: 251;151
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://local.shaws.com/me/waterville/251-kennedy-memorial-dr.html"
