--- a/data/cities/windham/shaws.yml
+++ b/data/cities/windham/shaws.yml
@@ -8,4 +8,4 @@ street: "Roosevelt Trail"
 housenumber: 770
 phone: ""
 opening_hours: "07:00-21:00"
-website: ""
+website: "https://local.shaws.com/me/windham/770-roosevelt-trail.html"
