update content and data

--- a/data/cities/bangor/dollar-tree.yml
+++ b/data/cities/bangor/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Stillwater Avenue"
 housenumber: 638
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/bangor/3888/"
