--- a/data/cities/caribou/dollar-tree.yml
+++ b/data/cities/caribou/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Bennett Drive"
 housenumber: 124
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/caribou/5058/"
