--- a/data/cities/presque-isle/dollar-tree.yml
+++ b/data/cities/presque-isle/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 830
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/presque-isle/5102/"
