--- a/data/cities/rockland/dollar-tree.yml
+++ b/data/cities/rockland/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Camden Street"
 housenumber: 265
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/rockland/5919/"
