--- a/data/cities/auburn/dollar-tree.yml
+++ b/data/cities/auburn/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Center Street"
 housenumber: 730
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/auburn/3192/"
