--- a/data/cities/augusta/dollar-tree.yml
+++ b/data/cities/augusta/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Shaw's Plaza"
 housenumber: 
 phone: "+1 (207) 480-6010"
 opening_hours: ""
-website: "https://www.dollartree.com/locations/me/augusta/2490/?utm_source=Google&utm_medium=Maps&utm_campaign=Google+Places"
+website: "https://www.dollartree.com/locations/me/augusta/2490/"
