--- a/data/cities/calais/dollar-tree.yml
+++ b/data/cities/calais/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 153
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/calais/6266/"
