--- a/data/cities/dover-foxcroft/dollar-tree.yml
+++ b/data/cities/dover-foxcroft/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "West Main Street"
 housenumber: 1012
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/dover-foxcroft/6348/"
