--- a/data/cities/gray/dollar-tree.yml
+++ b/data/cities/gray/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Portland Road"
 housenumber: 20
 phone: "2076570002"
 opening_hours: "Mo-Su 09:00-21:00"
-website: ""
+website: "https://www.dollartree.com/locations/me/gray/5086/"
