--- a/data/cities/lewiston/dollar-tree.yml
+++ b/data/cities/lewiston/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Lisbon Street"
 housenumber: 1035
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/lewiston/2837/"
