--- a/data/cities/south-portland/dollar-tree.yml
+++ b/data/cities/south-portland/dollar-tree.yml
@@ -8,4 +8,4 @@ street: "Market Street"
 housenumber: 50
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.dollartree.com/locations/me/south-portland/5301/"
