--- a/data/cities/augusta/walmart-supercenter.yml
+++ b/data/cities/augusta/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 9095019093
-type: node
-latitude: 44.34378
-longitude: -69.78995
-postcode: ""
+id: 150859828
+type: way
+latitude: 44.34287
+longitude: -69.79123
+postcode: "04330"
 city: Augusta
 street: "Civic Center Drive"
 housenumber: 201
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1-207-623-8223"
+opening_hours: "Mo-Su 06:00-24:00"
+website: "https://www.walmart.com/store/2046-augusta-me"
