update content and data

--- a/data/cities/portland/cumberland-farms.yml
+++ b/data/cities/portland/cumberland-farms.yml
@@ -1,11 +1,11 @@
-id: 397367057
-type: way
-latitude: 43.68631
-longitude: -70.29294
+id: 7170757796
+type: node
+latitude: 43.6865
+longitude: -70.26847
 postcode: "04103"
 city: Portland
-street: "Forest Avenue"
-housenumber: 1136
+street: "Washington Avenue"
+housenumber: 801
 phone: ""
 opening_hours: ""
 website: ""
