--- a/data/cities/freeport/under-armour.yml
+++ b/data/cities/freeport/under-armour.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 66
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://store-locations.underarmour.com/me/freeport/UAFH-66MSFM"
