update content and data

--- a/data/cities/augusta/kohls.yml
+++ b/data/cities/augusta/kohls.yml
@@ -8,4 +8,4 @@ street: "Stephen King Drive"
 housenumber: 80
 phone: "+1-207-626-0717"
 opening_hours: ""
-website: ""
+website: "https://www.kohls.com/stores/me/augusta-173.shtml"
