--- a/data/cities/kennebunk/moon-and-back.yml
+++ b/data/cities/kennebunk/moon-and-back.yml
@@ -7,5 +7,5 @@ city: Kennebunk
 street: "Portland Road"
 housenumber: 45
 phone: "207-802-0720"
-opening_hours: "Mon-Sun 9am-5pm"
+opening_hours: "Mo-Su 09:00-17:00"
 website: "https://moonandback.com/"
