--- a/data/cities/kittery/loft.yml
+++ b/data/cities/kittery/loft.yml
@@ -8,4 +8,4 @@ street: "Route 1"
 housenumber: 283
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.loft.com/outlet/us/me/kittery/283-us-route-1.html"
