--- a/data/cities/biddeford/kohls.yml
+++ b/data/cities/biddeford/kohls.yml
@@ -8,4 +8,4 @@ street: "Gateway Commons Dr"
 housenumber: 75
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.kohls.com/stores/me/biddeford-1516.shtml"
