--- a/data/cities/scarborough/michaels.yml
+++ b/data/cities/scarborough/michaels.yml
@@ -8,4 +8,4 @@ street: "Payne Road"
 housenumber: 490
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://locations.michaels.com/me/scarborough/2045"
