--- a/data/cities/auburn/joann-fabrics-and-crafts.yml
+++ b/data/cities/auburn/joann-fabrics-and-crafts.yml
@@ -8,4 +8,4 @@ street: "Center Street"
 housenumber: 730
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.joann.com/me/auburn/875/"
