--- a/data/cities/bangor/joann-fabrics-and-crafts.yml
+++ b/data/cities/bangor/joann-fabrics-and-crafts.yml
@@ -8,4 +8,4 @@ street: "Stillwater Avenue"
 housenumber: 710
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://stores.joann.com/me/bangor/873/"
