--- a/data/cities/waterville/joann-fabrics-and-crafts.yml
+++ b/data/cities/waterville/joann-fabrics-and-crafts.yml
@@ -8,4 +8,4 @@ street: "Jfk Plaza"
 housenumber: 180
 phone: "+12078727544"
 opening_hours: "Mo-Sa 08:00-20:00, Su 10:00-18:00"
-website: "https://stores.joann.com/me/waterville/410/?utm_source=Google&utm_medium=Maps&utm_campaign=Google+Places"
+website: "https://stores.joann.com/me/waterville/410/"
