update content and data

--- a/data/cities/biddeford/gamestop.yml
+++ b/data/cities/biddeford/gamestop.yml
@@ -8,4 +8,4 @@ street: "Alfred Street"
 housenumber: 574
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.gamestop.com/store/us/me/biddeford/7795/alfred-street-gamestop"
