--- a/data/cities/portland/hannaford.yml
+++ b/data/cities/portland/hannaford.yml
@@ -1,11 +1,11 @@
-id: 255940901
+id: 650795012
 type: way
-latitude: 43.66367
-longitude: -70.26933
-postcode: "04101"
+latitude: 43.70201
+longitude: -70.31914
+postcode: "04103"
 city: Portland
-street: "Forest Avenue"
-housenumber: 295
+street: "Riverside Street"
+housenumber: 787
 phone: ""
 opening_hours: ""
 website: ""
