--- a/data/cities/augusta/big-apple.yml
+++ b/data/cities/augusta/big-apple.yml
@@ -1,11 +1,11 @@
-id: 860717750
+id: 481117119
 type: way
-latitude: 44.33977
-longitude: -69.79276
+latitude: 44.31428
+longitude: -69.79854
 postcode: "04330"
 city: Augusta
-street: "Civic Center Drive"
-housenumber: 146
-phone: ""
+street: "Western Avenue"
+housenumber: 205
+phone: "+1-207-623-2689"
 opening_hours: ""
 website: ""
