--- a/data/cities/caribou/save-a-lot.yml
+++ b/data/cities/caribou/save-a-lot.yml
@@ -8,4 +8,4 @@ street: "Skyway Drive"
 housenumber: 42
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://savealot.com/grocery-stores/caribou-04736-21642/"
