--- a/data/cities/lewiston/save-a-lot.yml
+++ b/data/cities/lewiston/save-a-lot.yml
@@ -8,4 +8,4 @@ street: "East Avenue"
 housenumber: 10
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://savealot.com/grocery-stores/lewiston-04240-23499/"
