--- a/data/cities/south-paris/save-a-lot.yml
+++ b/data/cities/south-paris/save-a-lot.yml
@@ -8,4 +8,4 @@ street: "Main Street"
 housenumber: 179
 phone: "+1-207-739-2992"
 opening_hours: "Mo-Su 08:00-20:00"
-website: ""
+website: "https://savealot.com/grocery-stores/south-paris-04281-24397/"
